[FIX] sidenav tab content overflow hiding form effects, tab border effects on hover
BETA-282 [IN PROGRESS -> DONE]

--- a/BaCa2/assets/scss/_sidenav.scss
+++ b/BaCa2/assets/scss/_sidenav.scss
@@ -162,7 +162,7 @@
         $tab_border_color: safe_get($map, $sidenav_default_variables, tab_border_color);
         $tab_icon_color_active: safe_get($map, $sidenav_default_variables, tab_icon_color_active);
 
-        .sub-tabs-wrapper {
+        .sub-tabs-spacer {
             background-color: $tab_bg_color;
         }
 
@@ -175,14 +175,11 @@
 
             &:hover, &.active {
                 background-color: $tab_bg_color_hover;
-
-                &.has-sub-tabs:not(:last-child), {
-                    border-bottom-color: $tab_bg_color_hover;
-                }
             }
 
-            &.active:not(.has-sub-tabs) {
-                border-bottom-color: $tab_bg_color_hover;
+            &.has-sub-tabs:hover, &.active {
+                border-top-color: transparent;
+                border-bottom-color: transparent;
             }
 
             &.has-sub-tabs:hover ~ .sidenav-tab:not(:hover),
@@ -192,21 +189,23 @@
             &:has(~ .sidenav-tab.has-sub-tabs:hover):not(:hover),
             &:has(~ .sidenav-tab.has-sub-tabs.active):not(:hover) {
                 background-color: $tabs_bg_color_hover;
-
-                &:not(:last-child) {
-                    border-bottom-color: $tabs_bg_color_hover;
-                }
+                border-top-color: transparent;
+                border-bottom-color: transparent;
             }
 
-            &.active:not(.has-sub-tabs) ~ .sidenav-tab,
-            &:has(~ .sidenav-tab.active:not(.has-sub-tabs)) {
-                &:not(:hover) {
-                    border-bottom-color: $tab_bg_color;
-                }
+            &.active:not(.has-sub-tabs) ~ .sidenav-tab:not(:hover),
+            &:has(~ .sidenav-tab.active:not(.has-sub-tabs)):not(:hover) {
+                border-bottom-color: transparent;
+                border-top-color: transparent;
+            }
 
-                &:hover:not(:first-child) {
-                    border-top-color: $tab_border_color;
-                }
+            &.active ~ .sidenav-tab:not(.has-sub-tabs):hover,
+            &:has(~ .active):not(.has-sub-tabs):hover {
+                border-top-color: $tab_border_color;
+            }
+
+            &:first-child {
+                border-top: none;
             }
 
             &:last-child,
@@ -230,10 +229,6 @@
 
 .tab-content-wrapper {
     display: none;
-
-    .tab-content {
-        overflow: hidden;
-    }
 }
 
 @media (max-width: 767px) {
